[tool.poetry]
name = "jsontoyaml"
version = "0.1.0"
description = "A sublime package to convert json to yaml and yaml to json"
authors = ["fernandocarletti <fernandoccarletti@gmail.com"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
